# Bezier

./: CMakeLists.txt
include/Bezier/: bezier.h
src/: bezier.cpp
tests/: CMakeLists.txt  test_bezier.cpp
